[package]
name = "nullfs"
version = "0.1.0"
authors = ["Yishen Miao <mys721tx@gmail.com>"]
description = "A null filesystem"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
time = "0.1"
libc = "0.2"
clap = "3.1.3"
